Actualización de index y estilos

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav class="navbar">
             <h2>BLU<span>E</span>ASY  </h2>
             <div class="links">
-                <button>HOME</button>
+                <button class="btn-principal">HOME</button>
                 <a href="">SEVICES</a>
                 <a href="">FEATURES</a>
                 <a href="">PORTOFOLIO</a>
@@ -51,5 +51,142 @@
             </div>
         </div>
     </section>
+    <section class="images">
+        <div class="nav2">
+            <div>
+            <h1> PORTFOLIO</h1>
+            <div class="linea"></div>
+            </div>
+            <div class="links-portofolio">
+                <button class="btn-principal">ALL</button>
+                    <a href="">PANORAMAS</a>
+                    <a href="">PORTRAITS</a>
+                    <a href="">MACRO</a>
+                    <a href="">JOURNAL</a>
+            </div>
+        </div>
+        <div class="image-grid">
+            <img src="assets/images/photo01.png" alt="">
+            <img src="assets/images/photo02.png" alt="">
+            <img src="assets/images/photo03.png" alt="">
+            <img src="assets/images/photo04.png" alt="">
+            <img src="assets/images/photo05.png" alt="">
+            <img src="assets/images/photo06.png" alt="">
+            <img src="assets/images/photo07.png" alt="">
+            <img src="assets/images/photo08.png" alt="">
+        </div>
+    </section>
+    <section class="video">
+        <div class="text-video">
+            <h1>JUST DEFAULT SECTION</h1>
+            <div class="linea-blanca"></div>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex dolorem explicabo labore deleniti saepe consectetur, quod praesentium quam obcaecati architecto!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus minus vero corrupti illo iusto recusandae, rem ab quisquam earum exercitationem.</p>
+            <button class="visit">VISIT ME</button>
+        </div>
+        <img src="assets/images/VimeoVideo.png" alt="">
+    </section>
+    <section class="twitter">
+        <div class="twit">
+            <div>
+                <h1>TWITTER</h1>
+                <div class="linea-blanca"></div>
+            </div>
+            <img src="assets/images/icon-twitter.png" alt="">
+        </div>
+        <div class="text-twit">
+            <p>Unerdwear cookie liquorice. Cake donut cupcake lollipop souffle candy. Chocolate oat cake <span>@cheescake</span> tootsie roll</p>
+        </div>
+    </section>
+    <section class="redes">
+        <div class="redes-izq">
+            <h1>WHO IS JHON DOE</h1>
+            <div class="linea-blanca"></div>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium commodi repellendus ex facere, a fuga consequatur debitis dolorum odio nemo?</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi amet, dicta unde reprehenderit delectus alias quae? Nulla architecto eligendi soluta?</p>
+        </div>
+        <div class="redes-der">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat sint velit sapiente eveniet optio beatae! Magni, harum. Ex, officiis consequuntur.</p>
+            <img src="assets/images/icon-twitterF.png" alt="">
+            <img src="assets/images/icon-google-plusF.png" alt="">
+            <img src="assets/images/icon-dribbbleF.png" alt="">
+            <img src="assets/images/icon-coffeeF.png" alt="">
+        </div>
+    </section>
+    <section class="testimonios">
+        <div class="nav2">
+            <div>
+            <h1> TESTIMONIALS</h1>
+            <div class="linea"></div>
+            </div>
+            <div class="comillas">
+                <p>´´</p>
+            </div>
+        </div >
+        <div class="text-testi">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur incidunt temporibus, odio impedit voluptatibus aliquid, eligendi, nihil culpa id dolore eum? Deserunt voluptates ut et nihil iure maxime quo ipsum?</p>
+        </div>
+        <p><span>-Walter White </span></p>
+    </section>
+    <section class="seccion-contacto">
+        <div class="contenedor-contacto">
+
+            <div class="columna-izquierda">
+            <h2 class="titulo-contacto">CONTACTO</h2>
+
+            <form class="formulario-contacto">
+
+                <label class="campo">
+                <span class="etiqueta">NOMBRE COMPLETO</span>
+                <input class="entrada" type="text" name="nombre">
+                </label>
+
+                <label class="campo">
+                <span class="etiqueta">EMAIL</span>
+                <input class="entrada" type="email" name="correo">
+                </label>
+
+            </form>
+            </div>
+            <div class="columna-derecha">
+            <p class="pArriba">
+                Jujubes bear claw croissant wafer sweet lemon drops brownie chocolate bar.
+                Sweet lollipop halvah tootsie roll cake fruitcake.
+                Chocolate cake chocolate bar gingerbread lollipop tart.
+            </p>
+            <p>
+                Linda Newman<br>
+                W325 State Road 123<br>
+                Mondovi, WI 98746-54321<br>
+                (715) 946 - 1234
+            </p>
+            </div>
+            <div class="contenedor-mensaje">
+            <label class="campo">
+                <span class="etiqueta">MENSAJE</span>
+                <textarea class="mensaje"></textarea>
+            </label>
+            </div>
+            <div class="contenedor-boton">
+            <button class="boton-enviar" type="submit">MENSAJE</button>
+            </div>
+
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="footer-menu">
+        <a href="#">Home</a>
+        <span>|</span>
+        <a href="#">Services</a>
+        <span>|</span>
+        <a href="#">Portfolio</a>
+        <span>|</span>
+        <a href="#">Contact</a>
+    </div>
+
+    <div class="footer-copy">
+        2013 ©
+    </div>
+    </footer>
 </body>
 </html>
